<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StatusLogger</string>
    <string name="action_settings">Settings</string>
    <string name="label_output_filename">Output Filename</string>
    <string name="label_format_string">Format String</string>
    <string name="label_sample">Sample</string>
    <string name="label_append_mode">Append to Output File</string>
    <string name="label_auto_start">Auto Start at Boot</string>
    <string name="label_preference">Preference</string>
    <string name="label_service">Service</string>
    <string name="toggle_running">Running</string>
    <string name="toggle_stop">Stop</string>
    <string name="label_period">Period[second]</string>
    <string name="label_tag">Tag</string>
    <string-array name="defined_tags">
		<item >%[Date]</item>
		<item >%[Time]</item>
		<item >%[Year]</item>
		<item >%[Month]</item>
		<item >%[Day]</item>
		<item >%[Hour]</item>
		<item >%[Min]</item>
		<item >%[Sec]</item>
		<item >%[UptimeDate]</item>
		<item >%[UptimeTime]</item>
		<item >%[UptimeYear]</item>
		<item >%[UptimeMonth]</item>
		<item >%[UptimeDay]</item>
		<item >%[UptimeHour]</item>
		<item >%[UptimeMin]</item>
		<item >%[UptimeSec]</item>
		<item >%[RealUptimeDate]</item>
		<item >%[RealUptimeTime]</item>
		<item >%[RealUptimeYear]</item>
		<item >%[RealUptimeMonth]</item>
		<item >%[RealUptimeDay]</item>
		<item >%[RealUptimeHour]</item>
		<item >%[RealUptimeMin]</item>
		<item >%[RealUptimeSec]</item>
		<item >%[BatteryStatus]</item>
		<item >%[BatteryHealth]</item>
		<item >%[BatteryPlugged]</item>
		<item >%[BatteryPresent]</item>
		<item >%[BatteryLevel]</item>
		<item >%[BatteryScale]</item>
		<item >%[BatteryVoltage]</item>
		<item >%[BatteryTemperature]</item>
		<item >%[BatteryTechnology]</item>
        <item >%[CdmaAsuLevel]</item>
		<item >%[CdmaDbm]</item>
		<item >%[CdmaEcio]</item>
		<item >%[CdmaLevel]</item>
		<item >%[EvdoAsuLevel]</item>
		<item >%[EvdoDbm]</item>
		<item >%[EvdoEcio]</item>
		<item >%[EvdoLevel]</item>
		<item >%[EvdoSnr]</item>
		<item >%[GsmAsuLevel]</item>
		<item >%[GsmBitErrorRate]</item>
		<item >%[GsmDbm]</item>
		<item >%[GsmLevel]</item>
		<item >%[GsmSignalStrength]</item>
        <item >%[LteAsuLevel]</item>
        <item >%[LteCqi]</item>
        <item >%[LteDbm]</item>
        <item >%[LteLevel]</item>
    	<item >%[LteRsrp]</item>
        <item >%[LteRsrq]</item>
        <item >%[LteRssnr]</item>
        <item >%[LteSignalStrength]</item>
        <item >%[MobileRxBytes]</item>
		<item >%[MobileTxBytes]</item>
		<item >%[MobileRxPackets]</item>
		<item >%[MobileTxPackets]</item>
		<item >%[TotalRxBytes]</item>
		<item >%[TotalTxBytes]</item>
		<item >%[TotalRxPackets]</item>
		<item >%[TotalTxPackets]</item>        
    </string-array>
    <string-array name="tag_description">
		<item >Date(year/month/day)</item>
		<item >Time(hour:minute:second)</item>
		<item >Year</item>
		<item >Month</item>
		<item >Day</item>
		<item >Hour</item>
		<item >Minute</item>
		<item >Second</item>
		<item >Uptime by Date(year/month/day)</item>
		<item >Uptime by Time(hour:minute:second)</item>
		<item >Uptime by Year</item>
		<item >Uptime by Month</item>
		<item >Uptime by Day</item>
		<item >Uptime by Hour</item>
		<item >Uptime by Minute</item>
		<item >Uptime by Second</item>
		<item >Real Uptime by Date(year/month/day)</item>
		<item >Real Uptime by Time(hour:minute:second)</item>
		<item >Real Uptime by Year</item>
		<item >Real Uptime by Month</item>
		<item >Real Uptime by Day</item>
		<item >Real Uptime by Hour</item>
		<item >Real Uptime by Minute</item>
		<item >Real Uptime by Second</item>
        <item >Battery Status</item>
		<item >Battery Health</item>
		<item >Battery Plugged</item>
		<item >Battery Present</item>
		<item >Battery Level</item>
		<item >Battery Scale</item>
		<item >Battery Voltage</item>
		<item >Battery Temperature</item>
		<item >Battery Technology</item>
        <item >CDMA asu Level</item>
		<item >CDMA dBm</item>
		<item >CDMA Ec/Io</item>
		<item >CDMA Level</item>
		<item >EV-DO asu Level</item>
		<item >EV-DO dBm</item>
		<item >EV-DO Ec/Io</item>
		<item >EV-DO Level</item>
		<item >EV-DO SNR</item>
		<item >GSM asu Level</item>
		<item >GSM Bit Error Rate</item>
		<item >GSM dBm</item>
		<item >GSM Level</item>
		<item >GSM Signal Strength</item>
		<item >LTE asu Level</item>
        <item >LTE CQI</item>
        <item >LTE dBm</item>
        <item >LTE Level</item>
        <item >LTE RSRP</item>
        <item >LTE RSRQ</item>
        <item >LTE RSSNR</item>
        <item >LTE Signal Strength</item>
        <item >Rx Bytes over Mobile Network</item>
		<item >Tx Bytes over Mobile Network</item>
		<item >Rx Packets over Mobile Network</item>
		<item >Tx Packets over Mobile Network</item>
        <item >Total Rx Bytes</item>
		<item >Total Tx Bytes</item>
		<item >Total Rx Packets</item>
		<item >Total Tx Packets</item>
        </string-array>
    	
</resources>